# ukrqualbench

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/benchmarks/: adversarial_tasks.json  generation_tasks.json  lite.json  long_context_tasks.json
data/dictionaries/: anglicisms.json  positive_markers.json  russisms.json
data/gold/: false_positive_calibration.json  false_positives.json  gec_calibration.json  mc_calibration.json  pairwise_calibration.json  positive_markers.json  russism_calibration.json  russisms.json
src/ukrqualbench/: __init__.py  cli.py
src/ukrqualbench/core/: __init__.py  checkpoint.py  circuit_breaker.py  config.py  elo.py  elo_registry.py  evaluator.py  metrics.py  pairwise.py  protocols.py  schemas.py
src/ukrqualbench/datasets/: __init__.py  assembler.py  loader.py
src/ukrqualbench/datasets/sources/: __init__.py  brown_uk.py  flores.py  ua_gec.py  zno.py
src/ukrqualbench/detectors/: __init__.py  anglicism_detector.py  base.py  calque_detector.py  fertility.py  positive_marker_detector.py  russism_detector.py
src/ukrqualbench/judges/: __init__.py  base.py  calibrator.py  pairwise.py  prompts.py
src/ukrqualbench/models/: __init__.py  anthropic.py  base.py  google.py  local.py  openai.py
src/ukrqualbench/reports/: __init__.py  analysis.py  html.py  leaderboard.py
tests/: __init__.py  conftest.py  test_checkpoint.py  test_circuit_breaker.py  test_cli.py  test_core_engine.py  test_datasets.py  test_detectors.py  test_elo.py  test_judges.py  test_models.py  test_reports.py
